syntax = "proto3";

package wwdatabase;

option go_package = "github.com/cod3rcarl/wwdatabase-go-backend;wwdatabase_go_backend";

import "google/protobuf/timestamp.proto";


service Wwdatabase {
  rpc GetChampionByName (Name) returns (Champion) {}
  rpc GetCurrentChampion (GetCurrentChampionParams) returns (Champion) {}
  rpc GetChampionByDate (Date) returns (Champion) {}
  rpc GetAllChampions (GetChampionsParams) returns (ChampionList) {}
  rpc CreateChampion (NewChampionData) returns (CreateChampionPayload) {}
}

message NewChampionData {
  string title_holder = 1;
  string show = 2;
  google.protobuf.Timestamp date_won = 3;

}

message Name {
  string name = 1;
}

message Date {
  google.protobuf.Timestamp date = 1;
}

message Champion {
  string title_holder = 1;
  optional int32 title_holder_number = 2;
  google.protobuf.Timestamp date_won = 3;
  optional google.protobuf.Timestamp date_lost = 4;
  string show = 5;
  optional int32 number_of_reigns = 6;
  optional int32 days_as_champion = 7;
  optional string previous_champion = 8;
  optional bool current_champion = 9;

}
message ChampionList {
  int32 total_count = 1;
  repeated Champion champions = 2;

}

message GetChampionsParams {

}

message GetCurrentChampionParams {
  bool current_champion = 1;
}

message CreateChampionPayload {
  bool success = 1;
  Champion champion = 2;
}
